<resources>
    <string name="app_name">MandiManager</string>
    <!--UserInfo-->
    <string name="txt_get">You\'ll get</string>
    <string name="txt_give">You\'ll give</string>
    <string name="txt_indian_rupee">₹ </string>
    <string name="txt_amount">Amount </string>
    <string name="txt_transaction">Transaction</string>
    <string name="save">Save</string>
    <string name="enter_any_details_e_g_name">Enter any details e.g. name</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="you_got">You Got</string>
    <string name="you_give">You Gave</string>
    <string name="entries">Entries</string>
    <string name="_500"> ₹ 500</string>
    <string name="you_will_give">You will give</string>
    <string name="you_will_get">You will get</string>
    <string name="title">Title</string>
    <string name="give_get">Give/Get</string>
    <string name="str_name">Name</string>
    <string name="str_user_image">User Image</string>
    <string name="remaining_weight">Remaining weight</string>
    <string name="weight">Weight</string>
    <string name="total_bori">Total Bori</string>
    <string name="clicked_image">Clicked Image</string>
    <string name="image_button">Image Button</string>
    <string name="pieces">Pieces</string>
    <string name="wt">Wt</string>
    <string name="remain_wt">Remain Wt</string>
    <string name="weight_details">Weight Details</string>
    <string name="total_weight">Total Weight</string>
    <string name="labour_charge_piece">Labour Charge/Piece :</string>
    <string name="charge">Charge</string>
    <string name="mandi_charge">Mandi Charge :</string>
    <string name="total_amount">Total amount :</string>
    <string name="amount">Amount</string>
    <string name="charges_details">Charges Details</string>
    <string name="calendar_image">Calendar Image</string>
    <string name="rate">Rate</string>
    <string name="total_price">Total Price</string>
    <string name="personal_details">Personal Details</string>
    <string name="bill_details">Bill Details</string>
    <string name="commodity_name">Commodity Name</string>
    <string name="txt_english">English</string>
    <string name="txt_mandi_samiti">Mandi Samiti</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Enter the registered email address to obtain the link to change the password</string>
    <string name="email_validation_empty">Email can\'t be empty</string>
    <string name="validation_empty">Field can\'t be empty</string>
    <string name="validation_number">Number should have min 10 digits.</string>
    <string name="email_validation_type">Field should be email</string>
    <string name="pass_validation_empty">Password can\'t be empty</string>
    <string name="txt_register_here">Register here</string>
    <string name="txt_name">Name</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_register">Register</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="orders">Orders</string>
    <string name="nav_open">Navigation drawer open</string>
    <string name="nav_close">Navigation drawer close</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="privacy_and_policy">Privacy Policy</string>
    <string name="drawer_profile">Drawer Profile</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="transaction_type">Transaction Type</string>
    <!--Run Time Permission-->
    <string name="perm_msg">This app needs permission for work without problems</string>
    <string name="perm_settings_msg">You have denied some permission. Allow all permissions at [Settings] > [Permissions]</string>
    <string name="perm_pos_label">Yes, Grant Permissions</string>
    <string name="perm_settings_pos_label">Go to Settings</string>
    <string name="perm_neg_label">No, Exit app</string>
    <string name="choose_option">Choose Option</string>
    <string name="str_u_give">You will give</string>
    <string name="str_u_get">You will give</string>
    <string name="call">Call</string>
    <string name="add_user">Add User</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_address">Enter address</string>
    <string name="add_msg">Added Successfully!!</string>
    <string name="msg_something_went_wrong">Something went wrong!!</string>
    <string name="crop_name">Crop Name</string>
    <string name="done">Done</string>
    <string name="lCharge">L.Charge </string>
    <string name="more_field">more field</string>
    <string name="final_amount"> Final Amount</string>
    <string name="total_labour_charge">Total Labour Charge</string>
    <string name="extra_details">Extra Details</string>
    <string name="fare">Fare</string>
    <string name="prev_amount">Previous Amount</string>
    <string name="payment_details">Payment Details</string>
    <string name="paid">Paid</string>
    <string name="entry">Entry</string>
    <string name="no_description">No Description</string>
</resources>
